--- a/UI-UX/CSS/landing-page.css
+++ b/UI-UX/CSS/landing-page.css
@@ -124,3 +124,9 @@ footer.footer {
   padding-top: 4rem;
   padding-bottom: 4rem;
 }
+
+.card {
+padding: 1rem;
+border: 1px solid black;
+margin: 1rem;
+}
